@@ -3330,8 +3330,6 @@ Matrix linspace (const ColumnVector& x1,
                  octave_idx_type n)
 
 {
-  if (n < 1) n = 1;
-
   octave_idx_type m = x1.numel ();
 
   if (x2.numel () != m)
@@ -3340,11 +3338,17 @@ Matrix linspace (const ColumnVector& x1,
 
   NoAlias<Matrix> retval;
 
+  if (n < 1)
+    {
+      retval.clear (m, 0);
+      return retval;
+    }
+
   retval.clear (m, n);
   for (octave_idx_type i = 0; i < m; i++)
     retval(i, 0) = x1(i);
 
-  // The last column is not needed while using delta.
+  // The last column is unused so temporarily store delta there
   double *delta = &retval(0, n-1);
   for (octave_idx_type i = 0; i < m; i++)
     delta[i] = (x2(i) - x1(i)) / (n - 1);
@@ -3358,6 +3362,7 @@ Matrix linspace (const ColumnVector& x1,
 
   return retval;
 }
+
 
 MS_CMP_OPS (Matrix, double)
 MS_BOOL_OPS (Matrix, double)
